# insure

./: .gitignore  package-lock.json
assets/: Insure_deep_logo.png:Zone.Identifier  insure_logo (1).png:Zone.Identifier
backend/: connection.ts  index.ts  indexer.ts  listener.ts  package-lock.json  package.json  tsconfig.json
backend/event_listener/: claimListener.ts
backend/switchboard-function/resolveClaimOracle/: main.ts
backend/switchboard-function/resolveClaimOracle.ts/: main.ts
backend/types/: insure.json  insure.ts
frontend/: package-lock.json  package.json
frontend/idl/: insure.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/creator/: page.tsx
frontend/src/app/my-insurance/: page.tsx
frontend/src/app/vaults/: page.tsx
frontend/src/app/vaults/[pubkey]/: page.tsx
frontend/src/components/layout/: AmbientBackground.tsx  Footer.tsx  Navbar.tsx
frontend/src/components/providers/: AppWalletProvider.tsx
frontend/src/lib/: anchor.ts
insure/: Anchor.toml
insure/programs/insure/: Cargo.toml
insure/programs/insure/src/: error.rs  lib.rs  state.rs
insure/programs/insure/tests/: test_initialize.rs
insure/programs/program/: Cargo.toml
insure/programs/program/src/: error.rs  instructions.rs  lib.rs  state.rs
switchboard-function/src/: main.ts
